--- a/index.html
+++ b/index.html
@@ -57,38 +57,50 @@
 	</div>
 	<div id = "keyboard"class = "keyboard">
 		<row>
-		<button>q</button>
-		<button>w</button>
-		<button>e</button>
-		<button>r</button>
-		<button>t</button>
-		<button>y</button>
-		<button>u</button>
-		<button>i</button>
-		<button>o</button>
-		<button>p</button>
+		<button>Q</button>
+		<button>W</button>
+		<button>E</button>
+		<button>R</button>
+		<button>T</button>
+		<button>Y</button>
+		<button>U</button>
+		<button>I</button>
+		<button>O</button>
+		<button>P</button>
 		</row>
 		<row class = "second">
-		<button>a</button>
-		<button>s</button>
-		<button>d</button>
-		<button>f</button>
-		<button>g</button>
-		<button>h</button>
-		<button>j</button>
-		<button>k</button>
-		<button>l</button>
+		<button>A</button>
+		<button>S</button>
+		<button>D</button>
+		<button>F</button>
+		<button>G</button>
+		<button>H</button>
+		<button>J</button>
+		<button>K</button>
+		<button>L</button>
 		</row>
 		<row>
 		<button class = "two">Bac</button>
-		<button>z</button>
-		<button>x</button>
-		<button>c</button>
-		<button>v</button>
-		<button>b</button>
-		<button>n</button>
-		<button>m</button>
+		<button>Z</button>
+		<button>X</button>
+		<button>C</button>
+		<button>V</button>
+		<button>B</button>
+		<button>N</button>
+		<button>M</button>
 		<button class = "two">Ent</button>
+		</row>
+		<row>
+		<button>Ą</button>
+		<button>Ś</button>
+		<button>Ę</button>
+		<button>Ć</button>
+		<button>Ę</button>
+		<button>Ń</button>
+		<button>Ź</button>
+		<button>Ż</button>
+		<button>Ł</button>
+		<button>Ó</button>
 		</row>
 	</div>
 	<h2 id = "answer" class="nonvisible"></h2>
